kmnz/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: namakemono
spec:
  selector:
    app: namakemono
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namakemono
spec:
  replicas: 1
  selector:
    matchLabels:
      app: namakemono
  template:
    metadata:
      labels:
        app: namakemono
    spec:
      containers:
        - name: namakemono
          image: ghcr.io/cs-sysimpl/namakemono-manager:latest
          ports:
            - containerPort: 8080
