kmnz/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: namakemono-db
spec:
  selector:
    db: namakemono
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namakemono-db
spec:
  replicas: 1
  selector:
    matchLabels:
      db: namakemono
  template:
    metadata:
      labels:
        db: namakemono
    spec:
      containers:
        - name: mysql
          image: ghcr.io/cs-sysimpl/namakemono-manager-db:latest
          ports:
            - name: tcp-mysql
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume
          readinessProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  exec mysqladmin ping -h localhost --silent
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: kmnz-mysql-pvc
