kmnz/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-http-app
spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
      namespace: gateway
  hostnames:
    - kmnz.apps.irori235.dev
  rules:
    - backendRefs:
        - name: namakemono
          port: 80
